fix: resolve 403 Forbidden on root and documentation endpoints